--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "this is an e commmerce website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "anil koundinya",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "ecommerce-backend": "file:",
-    "express": "^5.1.0"
+    "exphbs": "^1.2.0",
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.2",
+    "multer": "^ 1.4.5-lts.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
